--- a/devel/automake/1.9/Makefile
+++ b/devel/automake/1.9/Makefile
@@ -26,6 +26,8 @@ CONFIGURE_STYLE=	gnu
 CONFIGURE_ARGS=		--infodir=${PREFIX}/info
 MAKE_FLAGS+=		pkgvdatadir=${PREFIX}/share/automake${SUFFIX} \
 			APIVERSION=${VERSION}
+CONFIGURE_ENV+=		AUTOCONF_VERSION=${AUTOCONF_VERSION}
+MAKE_ENV+=		AUTOCONF_VERSION=${AUTOCONF_VERSION}
 SUBST_VARS=		SUFFIX
 
 REGRESS_DEPENDS=	${MODGNU_AUTOCONF_DEPENDS} \
