--- a/devel/automake/1.9/Makefile
+++ b/devel/automake/1.9/Makefile
@@ -18,7 +18,8 @@ PERMIT_DISTFILES_FTP=	Yes
 
 AUTOCONF_VERSION=	2.59
 
-BUILD_DEPENDS=		::devel/metaauto
+BUILD_DEPENDS=		::devel/metaauto \
+			${MODGNU_AUTOCONF_DEPENDS}
 RUN_DEPENDS=		${MODGNU_AUTOCONF_DEPENDS}
 
 SUFFIX=			-${VERSION}
