tweaks somehow that were missed in the last commit

--- a/textproc/sp/Makefile
+++ b/textproc/sp/Makefile
@@ -23,7 +23,8 @@ MAKE_FLAGS=	CXX="${CXX}" \
 		CXXFLAGS="${CXXFLAGS} -fno-implicit-templates -ansi" \
 		DEFINES="-DSP_HAVE_BOOL -DSP_ANSI_CLASS_INST -DSP_MULTI_BYTE \
 		         -DSP_HAVE_SOCKET" \
-		RANLIB="${RANLIB}"
+		RANLIB="${RANLIB}" \
+		LIBsp_VERSION=${LIBsp_VERSION}
 
 FAKE_FLAGS=	prefix=${DESTDIR}${PREFIX} \
 		INSTALL="${INSTALL_PROGRAM}"
