--- a/x11/kde/accessibility3/Makefile
+++ b/x11/kde/accessibility3/Makefile
@@ -4,7 +4,7 @@ COMMENT = 		X11 toolkit, accessibility aids
 CATEGORIES =		x11 x11/kde
 VERSION =		3.5.10
 DISTNAME =		kdeaccessibility-${VERSION}
-PKGNAME =		${DISTNAME}
+PKGNAME =		${DISTNAME}p0
 MODKDE_VERSION ?=	3.5.8
 SHARED_LIBS +=	KTTSD_Lib            1.0      # .0.1
 SHARED_LIBS +=	kttsd                2.0      # .1.0
@@ -17,10 +17,10 @@ FLAVORS =	debug
 SEPARATE_BUILD =	flavored
 
 WANTLIB =	ICE SM X11 Xext Xrender Xtst art_lgpl_2 c jpeg \
-		m png pthread stdc++ util z iconv ogg esd intl \
-		vorbisenc artsflow_idl audiofile ossaudio mad \
+		m png pthread stdc++ util z iconv ogg intl \
+		vorbisenc artsflow_idl audiofile mad \
 		vorbisfile qtmcop gmodule-2.0 gthread-2.0 \
-		glib-2.0 soundserver_idl \
+		glib-2.0 soundserver_idl sndio \
 		kmedia2_idl artsflow vorbis mcop idn \
 		Xau Xdmcp fam rpcsvc pcre
 
