--- a/x11/kde/games3/Makefile
+++ b/x11/kde/games3/Makefile
@@ -5,7 +5,7 @@ COMMENT =		K Desktop Environment, games
 CATEGORIES =		x11 x11/kde games
 VERSION =		3.5.10
 DISTNAME =		kdegames-${VERSION}
-PKGNAME =		${DISTNAME}
+PKGNAME =		${DISTNAME}p0
 MODKDE_VERSION =	3.5.8
 SHARED_LIBS +=	kdegames             4.0      # .3.0
 SHARED_LIBS +=	atlantic             4.0      # .3.0
@@ -18,9 +18,9 @@ LIB_DEPENDS = 	kdecore.>=6,artskde,DCOP,kdefx,kdeprint,kdesu,kdeui,kdnssd,kio,kp
 SEPARATE_BUILD =	flavored
 
 WANTLIB =	ICE SM X11 Xext Xrender art_lgpl_2 artsflow artsflow_idl \
-		audiofile c esd glib-2.0 gmodule-2.0 gthread-2.0 \
-		jpeg kmedia2_idl kwalletclient m mad mcop ogg ossaudio png \
-		pthread qtmcop soundserver_idl stdc++ util vorbis vorbisenc \
+		audiofile c glib-2.0 gmodule-2.0 gthread-2.0 \
+		jpeg kmedia2_idl kwalletclient m mad mcop ogg png pthread \
+		qtmcop sndio soundserver_idl stdc++ util vorbis vorbisenc \
 		vorbisfile z iconv intl idn Xau Xdmcp fam rpcsvc pcre
 
 .include <bsd.port.mk>
