--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.552 2008/12/30 13:59:10 pirofti Exp $
+# $OpenBSD: Makefile,v 1.554 2009/01/01 19:03:07 stsp Exp $
 # $FreeBSD: Makefile,v 1.129 1997/11/20 13:47:40 itojun Exp $
 #
 
@@ -222,8 +222,8 @@
      SUBDIR += p5-Event-RPC
      SUBDIR += p5-Filesys-Virtual-DAAP
      SUBDIR += p5-Geo-IP
-     SUBDIR += p5-IO-INET6
      SUBDIR += p5-IO-Interface
+     SUBDIR += p5-IO-Socket-INET6
      SUBDIR += p5-IO-Socket-Multicast
      SUBDIR += p5-Net-Amazon
      SUBDIR += p5-Net-BGP
@@ -443,6 +443,7 @@
      SUBDIR += weex
      SUBDIR += wget
      SUBDIR += wide-dhcp
+     SUBDIR += wide-dhcpv6
      SUBDIR += winexe
      SUBDIR += wmifinfo
      SUBDIR += wmnet
