--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.709 2009/06/12 17:08:32 jasper Exp $
+# $OpenBSD: Makefile,v 1.711 2009/06/19 00:52:31 jim Exp $
 # $FreeBSD: Makefile,v 1.85 1997/11/20 05:22:14 asami Exp $
 
      SUBDIR += ElectricFence
@@ -454,6 +454,9 @@
      SUBDIR += p5-Module-Versions-Report
      SUBDIR += p5-Moose
      SUBDIR += p5-MooseX-Clone
+     SUBDIR += p5-MooseX-Emulate-Class-Accessor-Fast
+     SUBDIR += p5-MooseX-MethodAttributes
+     SUBDIR += p5-MooseX-Types
      SUBDIR += p5-Mouse
      SUBDIR += p5-Net-Server
      SUBDIR += p5-Number-Compare
@@ -478,6 +481,7 @@
      SUBDIR += p5-Params-Util
      SUBDIR += p5-Params-Validate
      SUBDIR += p5-Paranoid
+     SUBDIR += p5-Parse-CPAN-Meta
      SUBDIR += p5-Parse-PlainConfig
      SUBDIR += p5-Parse-RecDescent
      SUBDIR += p5-Path-Class
@@ -621,6 +625,7 @@
      SUBDIR += p5-YAML-Shell
      SUBDIR += p5-YAML-Syck
      SUBDIR += p5-YAML-Tiny
+     SUBDIR += p5-YAML-XS
      SUBDIR += p5-accessors
      SUBDIR += p5-boolean
      SUBDIR += p5-capitalization
