--- a/net/nagios/Makefile
+++ b/net/nagios/Makefile
@@ -1,5 +1,7 @@
-# $OpenBSD: Makefile,v 1.5 2008/02/05 23:01:49 sthen Exp $
+# $OpenBSD: Makefile,v 1.7 2009/11/05 13:27:58 sthen Exp $
 
+  SUBDIR += check_email_delivery
+  SUBDIR += check_sip
   SUBDIR += cnagios
   SUBDIR += nagios
   SUBDIR += nagios,chroot
