--- a/databases/pear-DB_DataObject/Makefile
+++ b/databases/pear-DB_DataObject/Makefile
@@ -1,10 +1,10 @@
-# $OpenBSD: Makefile,v 1.2 2009/03/19 20:18:04 jasper Exp $
+# $OpenBSD: Makefile,v 1.4 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	SQL builder, object interface to database tables
 
 DISTNAME=	DB_DataObject-1.8.10
 PKGNAME=	pear-${DISTNAME}
-CATEGORIES=	databases pear
+CATEGORIES=	databases
 
 MODULES=	www/pear
 
@@ -13,9 +13,6 @@ PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
 
 RUN_DEPENDS=	::databases/pear-MDB2
 
