--- a/databases/pear-MDB2-mysql/Makefile
+++ b/databases/pear-MDB2-mysql/Makefile
@@ -1,14 +1,11 @@
-# $OpenBSD: Makefile,v 1.3 2009/09/15 17:37:21 jasper Exp $
+# $OpenBSD: Makefile,v 1.5 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	database abstraction layer for PHP
 
 V=		1.4.1
 DISTNAME=	MDB2_Driver_mysql-${V}
 PKGNAME=	pear-MDB2-mysql-${V}p2
-CATEGORIES=	net pear databases
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	net databases
 
 MODULES=	www/pear
 
