--- a/databases/pear-MDB2-mysqli/Makefile
+++ b/databases/pear-MDB2-mysqli/Makefile
@@ -1,14 +1,11 @@
-# $OpenBSD: Makefile,v 1.1.1.1 2009/06/22 15:45:40 giovanni Exp $
+# $OpenBSD: Makefile,v 1.3 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT =	MySQLi database abstraction layer for PHP
 
 V =		1.4.1
 DISTNAME =	MDB2_Driver_mysqli-${V}
 PKGNAME =	pear-MDB2-mysqli-${V}
-CATEGORIES =	net pear databases
-
-MASTER_SITES =	http://pear.php.net/get/
-EXTRACT_SUFX =	.tgz
+CATEGORIES =	net databases
 
 MAINTAINER =	Giovanni Bechis <giovanni@openbsd.org>
 MODULES =	www/pear
