--- a/databases/pear-MDB2-sqlite/Makefile
+++ b/databases/pear-MDB2-sqlite/Makefile
@@ -1,14 +1,11 @@
-# $OpenBSD: Makefile,v 1.1.1.1 2009/06/22 15:47:52 giovanni Exp $
+# $OpenBSD: Makefile,v 1.3 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT =	SQLite database abstraction layer for PHP
 
 V =		1.4.1
 DISTNAME =	MDB2_Driver_sqlite-${V}
 PKGNAME =	pear-MDB2-sqlite-${V}
-CATEGORIES =	net pear databases
-
-MASTER_SITES =	http://pear.php.net/get/
-EXTRACT_SUFX =	.tgz
+CATEGORIES =	net databases
 
 MAINTAINER =	Giovanni Bechis <giovanni@openbsd.org>
 MODULES =	www/pear
