--- a/devel/pear-Config/Makefile
+++ b/devel/pear-Config/Makefile
@@ -1,13 +1,11 @@
-# $OpenBSD: Makefile,v 1.9 2009/09/15 17:37:21 jasper Exp $
+# $OpenBSD: Makefile,v 1.11 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	configuration file library for PHP
 
 DISTNAME=	Config-1.10.7
 PKGNAME=	pear-${DISTNAME}p1
-CATEGORIES=	devel pear
+CATEGORIES=	devel
 
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
 MODULES=	www/pear
 
 RUN_DEPENDS=	:pear-XML-Parser-*:textproc/pear-XML-Parser \
