--- a/devel/pear-Date/Makefile
+++ b/devel/pear-Date/Makefile
@@ -1,13 +1,11 @@
-# $OpenBSD: Makefile,v 1.10 2009/09/15 17:37:21 jasper Exp $
+# $OpenBSD: Makefile,v 1.12 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	date and timezone classes for PHP
 
 DISTNAME=	Date-1.4.6
 PKGNAME=	pear-${DISTNAME}p1
-CATEGORIES=	devel pear
+CATEGORIES=	devel
 
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
 MODULES=	www/pear
 
 # BSD
