--- a/devel/pear-PHPUnit2/Makefile
+++ b/devel/pear-PHPUnit2/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.4 2007/09/16 02:53:11 merdely Exp $
+# $OpenBSD: Makefile,v 1.6 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	regression testing framework for PHP 5
 
 DISTNAME=	PHPUnit2-2.1.6
 PKGNAME=	pear-${DISTNAME}p1
-CATEGORIES=	devel pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	devel
 
 MAINTAINER=	Aleksander Piotrowski <alek@openbsd.org>
 MODULES=	www/pear
