--- a/mail/pear-Mail/Makefile
+++ b/mail/pear-Mail/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.6 2009/09/15 17:37:21 jasper Exp $
+# $OpenBSD: Makefile,v 1.8 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	class that provides multiple interfaces for sending email
 
 DISTNAME=	Mail-1.1.14
 PKGNAME=	pear-${DISTNAME}p1
-CATEGORIES=	mail pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	mail
 
 MODULES=	www/pear
 
