--- a/net/pear-Net-DNS/Makefile
+++ b/net/pear-Net-DNS/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.2 2009/09/17 00:51:45 sthen Exp $
+# $OpenBSD: Makefile,v 1.4 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	resolver library used to communicate with a DNS server
 
 DISTNAME=	Net_DNS-1.0.0
 PKGNAME=	pear-${DISTNAME:S/_/-/}p0
-CATEGORIES=	net pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	net
 
 MODULES=	www/pear
 
