--- a/net/pear-Net-IMAP/Makefile
+++ b/net/pear-Net-IMAP/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.7 2009/09/15 17:37:21 jasper Exp $
+# $OpenBSD: Makefile,v 1.9 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	implementation of the IMAP protocol for PHP
 
 DISTNAME=	Net_IMAP-1.0.3
 PKGNAME=	pear-${DISTNAME:S/_/-/}p3
-CATEGORIES=	net pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	net
 
 MODULES=	www/pear
 
