--- a/net/pear-Services-Weather/Makefile
+++ b/net/pear-Services-Weather/Makefile
@@ -1,13 +1,11 @@
-# $OpenBSD: Makefile,v 1.7 2009/09/15 17:37:21 jasper Exp $
+# $OpenBSD: Makefile,v 1.10 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	interface to various online weather-services for PHP
 
 DISTNAME=	Services_Weather-1.4.0
-PKGNAME=	pear-${DISTNAME:S/_/-/}p1
-CATEGORIES=	net pear
+PKGNAME=	pear-${DISTNAME:S/_/-/}p2
+CATEGORIES=	net
 
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
 MODULES=	www/pear
 
 # PHP License
@@ -16,7 +14,7 @@ PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
 
-RUN_DEPENDS	:pear-Cache-*:devel/pear-Cache \
+RUN_DEPENDS=	:pear-Cache-*:devel/pear-Cache \
 		:pear-HTTP-Request-*:net/pear-HTTP-Request \
 		:pear-XML-Serializer-*:textproc/pear-XML-Serializer
 
