--- a/security/pear-Auth/Makefile
+++ b/security/pear-Auth/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.6 2009/09/15 17:37:22 jasper Exp $
+# $OpenBSD: Makefile,v 1.8 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	authentication system for PHP5
 
 DISTNAME=	Auth-1.6.1
 PKGNAME=	pear-${DISTNAME:S/_/-/}p0
-CATEGORIES=	security pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	security
 
 MODULES=	www/pear
 
