--- a/textproc/pear-XML-Parser/Makefile
+++ b/textproc/pear-XML-Parser/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.6 2009/09/18 09:30:35 jasper Exp $
+# $OpenBSD: Makefile,v 1.8 2009/11/06 09:01:07 jasper Exp $
 
 COMMENT=	XML parsing class based on PHP's bundled expat
 
 DISTNAME=	XML_Parser-1.2.6
 PKGNAME=	pear-${DISTNAME:S/_/-/}p1
-CATEGORIES=	textproc pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	textproc
 
 MODULES=	www/pear
 
