--- a/textproc/pear-XML-Util/Makefile
+++ b/textproc/pear-XML-Util/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.5 2009/09/18 09:30:35 jasper Exp $
+# $OpenBSD: Makefile,v 1.7 2009/11/06 09:01:08 jasper Exp $
 
 COMMENT=	XML utility class for PHP
 
 DISTNAME=	XML_Util-1.1.1
 PKGNAME=	pear-${DISTNAME:S/_/-/}p2
-CATEGORIES=	textproc pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	textproc
 
 MODULES=	www/pear
 
