--- a/www/pear-HTML-Select/Makefile
+++ b/www/pear-HTML-Select/Makefile
@@ -1,13 +1,10 @@
-# $OpenBSD: Makefile,v 1.7 2007/09/15 20:38:25 merdely Exp $
+# $OpenBSD: Makefile,v 1.9 2009/11/06 09:01:08 jasper Exp $
 
 COMMENT=	class for generating HTML form select elements for PHP
 
 DISTNAME=	HTML_Select-1.2.1
 PKGNAME=	pear-${DISTNAME:S/_/-/}p1
-CATEGORIES=	www pear
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
+CATEGORIES=	www
 
 MAINTAINER=	Kevin Lo <kevlo@openbsd.org>
 
@@ -18,8 +15,5 @@ PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
-
-MASTER_SITES=	http://pear.php.net/get/
-EXTRACT_SUFX=	.tgz
 
 .include <bsd.port.mk>
