--- a/sysutils/fsstress/Makefile
+++ b/sysutils/fsstress/Makefile
@@ -1,14 +1,15 @@
-# $OpenBSD: Makefile,v 1.1.1.1 2009/12/18 02:33:07 beck Exp $
+# $OpenBSD: Makefile,v 1.4 2009/12/18 15:09:10 beck Exp $
 
-COMMENT=		File System/VFS layer stress tester
+COMMENT=		file system/VFS layer stress tester
 
 DISTNAME=		fsstress-1.0
+PKGNAME=		${DISTNAME}p0
 EXTRACT_SUFX=		.tgz
 CATEGORIES=		sysutils
 
 MAINTAINER=		Bob Beck <beck@openbsd.org>
 
-# BSD
+# GPLv2 (only)
 PERMIT_PACKAGE_CDROM=   Yes
 PERMIT_PACKAGE_FTP=     Yes
 PERMIT_DISTFILES_CDROM= Yes
@@ -16,11 +17,12 @@ PERMIT_DISTFILES_FTP=   Yes
 
 MASTER_SITES=	http://bofh.ucs.ualberta.ca/beck/fsstress/
 
-NO_REGRESS=     Yes
-WANTLIB=        c
+NO_REGRESS=	Yes
+WANTLIB=	c
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/fsstress ${PREFIX}/bin
+	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/fsstress
 	${INSTALL_DATA} ${WRKSRC}/README ${PREFIX}/share/doc/fsstress
 	${INSTALL_DATA} ${WRKSRC}/dotest.sample ${PREFIX}/share/doc/fsstress
 
