--- a/audio/shell-fm/Makefile
+++ b/audio/shell-fm/Makefile
@@ -1,15 +1,12 @@
-# $OpenBSD: Makefile,v 1.2 2009/03/06 21:24:52 jasper Exp $
+# $OpenBSD: Makefile,v 1.4 2010/04/29 08:27:19 dcoppa Exp $
 
 COMMENT=		console based player for last.fm radio streams
 
-DISTNAME=		shell-fm-0.6
+DISTNAME=		shell-fm-0.7
 PKGNAME=		${DISTNAME}p0
 CATEGORIES=		audio
-EXTRACT_SUFX=		.tar.bz2
 
 HOMEPAGE=		http://nex.scrapping.cc/code/shell-fm/
-
-MAINTAINER=		Guillaume Pinot <guillaume.pinot@tremplin-utc.net>
 
 # GPLv2
 PERMIT_PACKAGE_CDROM=	Yes
@@ -17,11 +14,12 @@ PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
 
-MASTER_SITES=		${HOMEPAGE}/downloads/
+MASTER_SITES=		http://www.phil.uu.nl/~lievisse/distfiles/
 
 LIB_DEPENDS=		ao::audio/libao \
-			mad::audio/libmad
-WANTLIB=		c m ossaudio
+			mad::audio/libmad \
+			tag,tag_c::audio/taglib
+WANTLIB=		c m
 
 USE_GMAKE=		yes
 FAKE_FLAGS=		DESTDIR="${WRKINST}${PREFIX}"
