--- a/x11/gnome/tracker/Makefile
+++ b/x11/gnome/tracker/Makefile
@@ -1,13 +1,13 @@
-# $OpenBSD: Makefile,v 1.28 2010/04/28 09:51:09 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.30 2010/04/29 17:06:39 ajacoutot Exp $
 
 COMMENT=	powerful desktop search tool and indexer
 
 GNOME_PROJECT=	tracker
-GNOME_VERSION=	0.8.3
+GNOME_VERSION=	0.8.4
 
 # there is already audio/tracker, so this port has to live
 # as tracker-search.
-PKGNAME=	tracker-search-${VERSION}p1
+PKGNAME=	tracker-search-${VERSION}p0
 
 EVO_VERSION=	2.30
 SUBST_VARS=	EVO_VERSION
@@ -69,7 +69,6 @@ DESKTOP_FILES=	Yes
 MODPY_RUNDEP=	No
 
 CONFIGURE_ARGS=	${CONFIGURE_SHARED} \
-		--enable-id3lib \
 		--enable-video-extractor=gstreamer \
 		--enable-gdkpixbuf \
 		--enable-gnome-keyring \
@@ -105,6 +104,9 @@ CONFIGURE_ARGS=	${CONFIGURE_SHARED} \
 		--without-enca \
 		--disable-libiptcdata \
 		--disable-libflac
+
+# there is a check in configure, but no id3 plugin whatsoever in source
+CONFIGURE_ARGS+= --disable-id3lib
 
 CONFIGURE_ENV+=	CPPFLAGS="-I${LOCALBASE}/include" \
 		LDFLAGS="-L${LOCALBASE}/lib" \
