--- a/devel/libsigc++-2/Makefile
+++ b/devel/libsigc++-2/Makefile
@@ -1,12 +1,12 @@
-# $OpenBSD: Makefile,v 1.15 2010/06/02 09:45:49 kili Exp $
+# $OpenBSD: Makefile,v 1.18 2010/06/04 17:29:23 espie Exp $
 
 COMMENT-main=		callback framework for C++
 COMMENT-docs=		callback framework for C++ documentation
 
-VERSION=		2.2.7
+VERSION=		2.2.8
 DISTNAME=		libsigc++-${VERSION}
 PKGNAME-main=		${DISTNAME}p0
-PKGNAME-docs=		libsigc++-docs-${VERSION}
+PKGNAME-docs=		libsigc++-docs-${VERSION}p0
 V=			2.0
 SUBST_VARS=		V
 SHARED_LIBS=		sigc-2.0 2.0
