--- a/math/ginac/Makefile
+++ b/math/ginac/Makefile
@@ -1,9 +1,10 @@
-# $Id: Makefile,v 1.6 2009/10/12 16:23:05 pirofti Exp $
+# $Id: Makefile,v 1.7 2010/06/07 13:47:44 espie Exp $
 
 COMMENT=	GiNaC is Not a Computer Algebra System (CAS)
 
 DISTNAME=	ginac-1.5.3
-SHARED_LIBS +=	ginac	1.5	# 0.3
+PKGNAME=	${DISTNAME}p0
+SHARED_LIBS +=	ginac	2.0	# 0.3
 CATEGORIES=	math
 
 HOMEPAGE=	http://www.ginac.de/
