--- a/devel/haddock/Makefile
+++ b/devel/haddock/Makefile
@@ -1,12 +1,16 @@
-# $OpenBSD: Makefile,v 1.15 2010/06/15 17:38:17 kili Exp $
+# $OpenBSD: Makefile,v 1.18 2010/06/18 21:34:23 kili Exp $
 
-COMMENT =	documentation-generation tool for Haskell libraries
+COMMENT-main =	documentation-generation tool for Haskell libraries
+COMMENT-lib =	haddock library
 
 DISTNAME =	haddock-2.7.2
-PKGNAME =	${DISTNAME}p1
+PKGNAME-main =	${DISTNAME}p2
+PKGNAME-lib =	hs-${DISTNAME}
 CATEGORIES =	devel
 
 HOMEPAGE =	http://www.haskell.org/haddock/
+
+MULTI_PACKAGES =		-main -lib
 
 # BSD3
 PERMIT_PACKAGE_CDROM =	Yes
@@ -20,18 +24,20 @@ PERMIT_DISTFILES_FTP =	Yes
 PSEUDO_FLAVORS =	no_deps
 FLAVOR ?=
 
-WANTLIB =		c m util
+WANTLIB-main =		c m util
 
 .if ! ${FLAVOR:L:Mno_deps}
 MODULES =		lang/ghc converters/libiconv
-# No haddock library (yet).
-MODGHC_BUILD =		cabal hackage nort
+MODGHC_BUILD =		cabal hackage register
 
-LIB_DEPENDS +=		gmp::devel/gmp
+LIB_DEPENDS-lib =
+LIB_DEPENDS-main =	${LIB_DEPENDS} \
+			gmp::devel/gmp
 
 BUILD_DEPENDS +=	::devel/alex \
 			::devel/happy \
 			::devel/hs-ghc-paths \
+			::lang/ghc,-doc \
 			::textproc/docbook \
 			::textproc/docbook-xsl \
 			::textproc/libxslt \
@@ -49,6 +55,10 @@ MASTER_SITES =		http://hackage.haskell.org/packages/archive/${DISTNAME:S,-,/,}/
 
 post-build:
 	@cd ${WRKBUILD}/doc && exec ${SETENV} ${MAKE_ENV} ${MAKE_PROGRAM} html
+	@cd ${WRKBUILD} && exec ${SETENV} ${MAKE_ENV} \
+		${MODGHC_SETUP_PROG} \
+		--with-haddock=${WRKBUILD}/dist/build/haddock/haddock \
+		haddock --haddock-option=-l${WRKBUILD}
 
 post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc
