--- a/textproc/p5-Lingua-Stem-It/Makefile
+++ b/textproc/p5-Lingua-Stem-It/Makefile
@@ -1,14 +1,12 @@
-# $OpenBSD: Makefile,v 1.7 2010/12/03 11:46:48 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.8 2011/05/24 21:01:23 jasper Exp $
 
 COMMENT=	Italian language stemming
 
 MODULES=	cpan
-DISTNAME=	Lingua-Stem-It-0.01
-REVISION=	2
+DISTNAME=	Lingua-Stem-It-0.02
 CATEGORIES=	textproc
-USE_GROFF =	Yes
 
-# Artistic
+# perl
 PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
