--- a/geo/p5-Geo-StreetAddress-US/Makefile
+++ b/geo/p5-Geo-StreetAddress-US/Makefile
@@ -1,16 +1,17 @@
-# $OpenBSD: Makefile,v 1.3 2010/12/03 11:45:37 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.4 2011/05/24 21:07:20 jasper Exp $
 
 COMMENT=	perl extension for parsing US street addresses
 MODULES=	cpan
-DISTNAME=	Geo-StreetAddress-US-0.99
-REVISION=	0
+DISTNAME=	Geo-StreetAddress-US-1.01
 CATEGORIES=	geo
-USE_GROFF =	Yes
 
 # Perl
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
 PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
+
+MODCPAN_EXAMPLES=	Yes
+MODCPAN_EXAMPLES_DIST=	eg
 
 .include <bsd.port.mk>
