--- a/textproc/p5-Font-TTF/Makefile
+++ b/textproc/p5-Font-TTF/Makefile
@@ -1,10 +1,9 @@
-# $OpenBSD: Makefile,v 1.23 2010/12/03 11:46:48 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.24 2011/05/24 20:52:56 jasper Exp $
 
 COMMENT=	perl module for TrueType font hacking
 
 MODULES=	cpan
-DISTNAME=	Font-TTF-0.45
-REVISION=	0
+DISTNAME=	Font-TTF-0.48
 CATEGORIES=	textproc
 USE_GROFF =	Yes
 
@@ -14,7 +13,7 @@ PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
 
-post-patch:
-	@rm -f ${WRKSRC}/lib/Font/TTF/*.orig
+pre-configure:
+	@rm ${WRKSRC}/lib/Font/TTF/*.orig
 
 .include <bsd.port.mk>
