--- a/textproc/p5-Lingua-Stem/Makefile
+++ b/textproc/p5-Lingua-Stem/Makefile
@@ -1,18 +1,18 @@
-# $OpenBSD: Makefile,v 1.9 2010/12/03 11:46:48 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.10 2011/05/24 20:59:03 jasper Exp $
 
 COMMENT=	stemming of words
 
 MODULES=	cpan
-DISTNAME=	Lingua-Stem-0.81
-REVISION=	1
+DISTNAME=	Lingua-Stem-0.84
 CATEGORIES=	textproc
-USE_GROFF =	Yes
 
-# Artistic
+# perl
 PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
+
+CONFIGURE_STYLE=modbuild
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
 RUN_DEPENDS=	textproc/p5-Lingua-PT-Stemmer \
@@ -23,5 +23,7 @@ RUN_DEPENDS=	textproc/p5-Lingua-PT-Stemmer \
 		textproc/p5-Lingua-Stem-Snowball-No \
 		textproc/p5-Lingua-Stem-Snowball-Se \
 		textproc/p5-Text-German
+
+MODCPAN_EXAMPLES=	Yes
 
 .include <bsd.port.mk>
