--- a/productivity/tryton/Makefile.inc
+++ b/productivity/tryton/Makefile.inc
@@ -1,6 +1,6 @@
-# $OpenBSD: Makefile.inc,v 1.1.1.1 2011/06/10 11:49:30 ajacoutot Exp $
+# $OpenBSD: Makefile.inc,v 1.2 2011/06/11 06:50:16 ajacoutot Exp $
 
-MODPY_EGG_VERSION=	2.0.1
+MODPY_EGG_VERSION ?=	2.0.1
 
 CATEGORIES +=		productivity
 
