--- a/emulators/qemu/Makefile
+++ b/emulators/qemu/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.69 2011/06/02 13:41:38 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.70 2011/06/10 21:47:54 sthen Exp $
 
 # no success building on other archs yet
 ONLY_FOR_ARCHS =	amd64 i386 mips64 mips64el powerpc sparc64
@@ -7,7 +7,7 @@ VMEM_WARNING =		yes
 COMMENT =		multi system emulator
 
 DISTNAME =		qemu-0.14.1
-REVISION =		1
+REVISION =		2
 CATEGORIES =		emulators
 MASTER_SITES =		${MASTER_SITE_SAVANNAH:=qemu/}
 
@@ -15,13 +15,13 @@ HOMEPAGE =		http://www.qemu.org/
 
 MAINTAINER=		Brad Smith <brad@comstyle.com>
 
-# GPLv2/LGPLv2/BSD
+# GPLv2, LGPLv2 and BSD
 PERMIT_PACKAGE_CDROM =	Yes
 PERMIT_PACKAGE_FTP =	Yes
 PERMIT_DISTFILES_CDROM = Yes
 PERMIT_DISTFILES_FTP =	Yes
 
-WANTLIB =		c jpeg m ossaudio png pthread util z
+WANTLIB =		c jpeg m ncurses ossaudio png pthread util z
 
 BUILD_DEPENDS =		textproc/texi2html
 LIB_DEPENDS =		graphics/jpeg \
@@ -42,8 +42,6 @@ CONFIGURE_ARGS =	--prefix=${PREFIX} \
 			--extra-ldflags=-L${LOCALBASE}/lib \
 			--disable-bsd-user \
 			--disable-curl \
-			--disable-curses \
-			--disable-guest-base \
 			--disable-uuid \
 			--disable-vnc-sasl \
 			--disable-vnc-tls
