--- a/mail/zarafa/Makefile.inc
+++ b/mail/zarafa/Makefile.inc
@@ -1,13 +1,11 @@
-# $OpenBSD: Makefile.inc,v 1.9 2011/06/02 12:45:17 ajacoutot Exp $
+# $OpenBSD: Makefile.inc,v 1.10 2011/06/10 15:55:00 ajacoutot Exp $
 
 # there is no point in building/running this on NO_SHARED_LIBS archs
 SHARED_ONLY=	Yes
 
 V?=		7.0.0
-BUILD?=		26667
+BUILD?=		27588
 DISTNAME?=	zcp-${V}
-
-DIST_SUBDIR?=	zarafa
 
 CATEGORIES+=	mail/zarafa
 
@@ -23,5 +21,7 @@ PERMIT_PACKAGE_FTP?=	Yes
 PERMIT_DISTFILES_CDROM?=Yes
 PERMIT_DISTFILES_FTP?=	Yes
 
-#MASTER_SITES?=	http://download.zarafa.com/community/final/${V:C/^([0-9]+\.[0-9]+).*/\1/}/${V}-${BUILD}/
-MASTER_SITES?=	http://download.zarafa.com/community/beta/${V:C/^([0-9]+\.[0-9]+).*/\1/}/${V}rc1-${BUILD}/sourcecode/
+DIST_SUBDIR?=		zarafa-rc2
+MASTER_SITES_ZARAFA=	http://download.zarafa.com/community/beta/${V:C/^([0-9]+\.[0-9]+).*/\1/}/${V}rc2-${BUILD}/sourcecode/
+#MASTER_SITES_ZARAFA=	http://download.zarafa.com/community/final/${V:C/^([0-9]+\.[0-9]+).*/\1/}/${V}-${BUILD}/
+MASTER_SITES?=		${MASTER_SITES_ZARAFA}
